<resources>
    <string name="app_name">pmdm-tresenraya</string>
    <string name="icono_estad_stica">Icono estadística</string>
    <string name="todo">TODO</string>
    <string name="_9x9">9x9</string>
    <string name="_6x6">6x6</string>
    <string name="_3x3">3x3</string>
    <string name="tama_o_de_la_tabla">Tamaño de la tabla</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="resultado_general">Resultado general</string>
    <string name="jugador_1">Jugador 1</string>
    <string name="vs">VS</string>
    <string name="jugador_2">Jugador 2</string>
    <string name="jugar">Jugar</string>
</resources>