<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        >


        <Button
            android:id="@+id/stadistic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/stadistic_scale" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <Button
            android:id="@+id/settings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/settings_scale"
            />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac_toe"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/cross_scale" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/circle_scale" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="100sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado_general"
            android:textSize="40sp"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jugador_1"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/score1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vs"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jugador_2"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/score2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_layout"
        android:layout_margin="20dp"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/board_scale" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tama_o_de_la_tabla"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            >

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/border_layout"
                android:text="@string/_3x3"
                android:textSize="20sp"
                />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/border_layout"
                android:text="@string/_6x6"
                android:textSize="20sp"
                />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/border_layout"
                android:text="@string/_9x9"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:text="@string/jugar"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20sp"
        android:background="@drawable/border_layout"
        />

</LinearLayout>